Closed
Bug 345600
Opened 19 years ago
Closed 19 years ago
Crash [@ nsTextInputListener::UpdateTextInputCommands] using onselect and removing textarea
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: smaug)
References
Details
(Keywords: crash, fixed1.8.1, testcase)
Crash Data
Attachments
(2 files)
539 bytes,
text/html
|
Details | |
4.63 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
See upcoming testcase, when selecting something in the textarea, Mozilla crashes.
This is not a (recent) regression, Mozilla1.7 also crashes.
Talkback ID: TB21243745K
nsTextInputListener::UpdateTextInputCommands nsTextInputListener::NotifySelectionChanged nsTypedSelection::NotifySelectionListeners nsFrameSelection::NotifySelectionListeners nsFrame::HandleEvent nsPresShellEventCB::HandleEvent nsEventDispatcher::Dispatch PresShell::HandleEventInternal PresShell::HandlePositionedEvent PresShell::HandleEvent nsViewManager::HandleEvent nsViewManager::DispatchEvent HandleEvent nsWindow::DispatchEvent nsWindow::DispatchMouseEvent
Reporter | ||
Comment 1•19 years ago
|
||
Assignee | ||
Comment 2•19 years ago
|
||
Simple null check is not enough, but propagating error up helps.
(Trunk patch would look almost the same, I just happened to have up-to-date 1.8
on this laptop.)
Assignee: events → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #230286 -
Flags: superreview?(roc)
Attachment #230286 -
Flags: review?(roc)
Attachment #230286 -
Flags: superreview?(roc)
Attachment #230286 -
Flags: superreview+
Attachment #230286 -
Flags: review?(roc)
Attachment #230286 -
Flags: review+
Assignee | ||
Comment 3•19 years ago
|
||
Good thing is that null check is enough on trunk.
Assignee | ||
Comment 4•19 years ago
|
||
I checked in the null check to trunk. I hope that is ok.
But do we want to get the fix to 1.8 too? I guess yes.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•19 years ago
|
Attachment #230286 -
Flags: approval1.8.1?
Updated•19 years ago
|
Whiteboard: [baking until 07-28]
Comment 5•19 years ago
|
||
Crash is Verified FIXED using build 2006-07-27-09 of SeaMonkey trunk under Windows XP with https://bugzilla.mozilla.org/attachment.cgi?id=230278&action=view as the testcase.
Status: RESOLVED → VERIFIED
Comment 6•19 years ago
|
||
Comment on attachment 230286 [details] [diff] [review]
proposed patch (for 1.8)
approved by schrep for drivers
Attachment #230286 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.1
Updated•19 years ago
|
Whiteboard: [baking until 07-28]
Updated•14 years ago
|
Crash Signature: [@ nsTextInputListener::UpdateTextInputCommands]
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•