Bug 345600, Crash [@ nsTextInputListener::UpdateTextInputCommands] using onselect and removing textarea, r+sr=roc